# app/models/device_model.py
@@ -1,10 +1,10 @@
-from app.utils.enums import RobotType, Status
+from app.utils.enums import DeviceType, Status
 from app.utils.extensions import db
 
 
-class Robot(db.Document):
+class Device(db.Document):
     name = db.StringField(required=True)
     mac = db.StringField(required=True)
-    type = db.EnumField(RobotType, default=RobotType.UGV)
+    type = db.EnumField(DeviceType, default=DeviceType.UGV)
     status = db.EnumField(Status, default=Status.ACTIVE)
-    meta = {"collection": "Robots"}
+    meta = {"collection": "Devices"}
