# app/models/mission_model.py
@@ -1,16 +1,14 @@
-from datetime import datetime
-
 from app.utils.enums import MissionStatus
-from app.models.robot_model import Robot
+from app.models.device_model import Device
 from app.models.user_model import User
 from app.utils.extensions import db
 
 
 class Mission(db.Document):
     name = db.StringField(default="Mission")
-    start_date = db.DateTimeField(default=datetime.now())
+    start_date = db.DateTimeField(default=None)
     end_date = db.DateTimeField(default=None)
     status = db.EnumField(MissionStatus, default=MissionStatus.CREATED)
-    robot_ids = db.ListField(db.ReferenceField(Robot), default=[])
+    device_ids = db.ListField(db.ReferenceField(Device), default=[])
     user_ids = db.ListField(db.ReferenceField(User), default=[])
     meta = {"collection": "Missions"}
